--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vivo-job-scheduler",
+  "name": "job-scheduler",
   "version": "1.0.0",
   "description": "",
   "main": "scr/app.js",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eerbano/vivo-job-scheduler.git"
+    "url": "git+https://github.com/eerbano/job-scheduler.git"
   },
   "keywords": [
     "scheduler"
@@ -26,7 +26,7 @@
   "author": "Enzo Erbano",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/eerbano/vivo-job-scheduler/issues"
+    "url": "https://github.com/eerbano/job-scheduler/issues"
   },
-  "homepage": "https://github.com/eerbano/vivo-job-scheduler#readme"
+  "homepage": "https://github.com/eerbano/job-scheduler#readme"
 }
